add 4 buttons, add border, add some designe for buttons

--- a/Videoplayer.csproj
+++ b/Videoplayer.csproj
@@ -8,4 +8,26 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Resourses\exit.png" />
+    <None Remove="Resourses\pause.png" />
+    <None Remove="Resourses\play.png" />
+    <None Remove="Resourses\stop.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resourses\exit.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resourses\pause.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resourses\play.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resourses\stop.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
